@@ -22,6 +22,9 @@ RELEASE 0.05 -
   - Compensate for a bug in os.path.normpath() that returns '' for './'
     on WIN32.
 
+  - More performance optimizations:  cache #include lines from files,
+    eliminate unnecessary calls.
+
   From Steven Knight:
 
   - Flush stdout after print so it intermixes correctly with stderr
